Fix test label text